objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>vlocity_cmt__Vlocity Sales Process</fullName>
        <description>Vlocity Sales Process</description>
        <isActive>true</isActive>
    </businessProcesses>
    <fields>
        <fullName>External_Id__c</fullName>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__BIG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SCP Dep</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__BigDeals__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Big Deal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Buying_Cycle__c</fullName>
        <label>Buying Cycle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Awareness of Needs</fullName>
                </value>
                <value>
                    <fullName>Assessments of Alternatives</fullName>
                </value>
                <value>
                    <fullName>Alleviation of Risks</fullName>
                </value>
                <value>
                    <fullName>Decision</fullName>
                </value>
                <value>
                    <fullName>Achievements of Results</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Calculated_Win_Probability__c</fullName>
        <inlineHelpText>= S (FCV * win probability) / S Calculated FCV
Is the probability considered for commercial dashboard and reporting
Possible Values: Calculated field, depending on the opportunity status and sub status, in %
Filled in by: Calculated Automatically</inlineHelpText>
        <label>SCP Dep</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__CompetidorConElQuePerdio__c</fullName>
        <label>Competidor con el que perdió</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Contacto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contacto</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Oportunidades</relationshipLabel>
        <relationshipName>Oportunidades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Dolar_Buget__c</fullName>
        <label>Dolar Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Estado_de_la_oportunidad__c</fullName>
        <label>Estado de la oportunidad</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>En Curso</fullName>
                </value>
                <value>
                    <fullName>Perdida</fullName>
                </value>
                <value>
                    <fullName>Firmado</fullName>
                </value>
                <value>
                    <fullName>Instalado</fullName>
                </value>
                <value>
                    <fullName>Cancelado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Estimated_Billing_Start_Date__c</fullName>
        <label>Inicio Facturación</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Estimated_FCV_Calculated__c</fullName>
        <description>Field to calculate the sum of Estimated in Suboportunities</description>
        <inlineHelpText>Adding up the estimated FCV of the sub opportunities win or in progress (not loss or cancelled)
Is the FCV considered for commercial dashboard and reporting
Posible Values: Calculated field in €.
Filled in by: Calculated automatically.</inlineHelpText>
        <label>SCP Dep</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Estimated_FCV__c</fullName>
        <description>Estimated by the account manager in early stages of the opportunity (m€)</description>
        <inlineHelpText>The account manager indicates an estimation of the total value of the project.
Posible Values: Free field in €
Filled in by: The account manager.</inlineHelpText>
        <label>SCP Dep</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Estimated_Year_End_Revenue__c</fullName>
        <label>Ingresos Totales año fiscal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__FCV__c</fullName>
        <label>Monto Contrato (ARG)</label>
        <summarizedField>OpportunityLineItem.SCP_Certa_GC__Campo_para_sumar_en_oportunidad__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.SCP_Certa_GC__Moneda__c</field>
            <operation>equals</operation>
            <value>ARG</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Fecha_comprometida_instalaci_n__c</fullName>
        <label>SCP Dep</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Fecha_comprometida_instalaci_n_formula__c</fullName>
        <formula>CloseDate +  SCP_Certa_GC__TMI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fecha comprometida instalación</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Fecha_probable_de_instalacion__c</fullName>
        <label>Fecha probable de instalación</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Full_Contract_Value__c</fullName>
        <label>SCP Dep</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Impacto_ejercicio_actual_ARG__c</fullName>
        <formula>IF( YEAR(SCP_Certa_GC__Fecha_probable_de_instalacion__c) = YEAR(TODAY()) , 

((SCP_Certa_GC__Total_CUV_ARG__c + SCP_Certa_GC__Total_CUV_USD__c * SCP_Certa_GC__Dolar_Buget__c ) + (( SCP_Certa_GC__Total_Abono_ARG__c + SCP_Certa_GC__Total_Abono_USD__c * SCP_Certa_GC__Dolar_Buget__c)* (12 - MONTH(SCP_Certa_GC__Fecha_probable_de_instalacion__c) ))) 

, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Impacto ejercicio actual (ARG)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Licitacion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Licitación</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Manual_Big_Deal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Big Deal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Moneda__c</fullName>
        <label>Moneda</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>$</fullName>
                </value>
                <value>
                    <fullName>U$S</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Monthly_Charges__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Ingreso recurrente mensual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Monto_Contrato_Dolar__c</fullName>
        <label>Monto Contrato (USD)</label>
        <summarizedField>OpportunityLineItem.SCP_Certa_GC__Campo_para_sumar_en_oportunidad__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.SCP_Certa_GC__Moneda__c</field>
            <operation>equals</operation>
            <value>USD</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Monto_total_Contrato_ARG__c</fullName>
        <formula>SCP_Certa_GC__FCV__c + SCP_Certa_GC__Monto_Contrato_Dolar__c* SCP_Certa_GC__Dolar_Buget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monto total Contrato (ARG)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__ObservacionRazonPerdida__c</fullName>
        <label>Observación razón perdida</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Partner__c</fullName>
        <label>Partner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Probabilidad__c</fullName>
        <label>Probabilidad</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Baja</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Alta</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Razon_perdida__c</fullName>
        <label>Razón perdida</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Retroactiva__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retroactiva</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__TMI__c</fullName>
        <label>TMI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Total_Abono_ARG__c</fullName>
        <label>Total Abono (ARG)</label>
        <summarizedField>OpportunityLineItem.SCP_Certa_GC__Cargo_totales_por_mes_Total_sumable__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.SCP_Certa_GC__Moneda__c</field>
            <operation>equals</operation>
            <value>ARG</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Total_Abono_USD__c</fullName>
        <label>Total Abono (USD)</label>
        <summarizedField>OpportunityLineItem.SCP_Certa_GC__Cargo_totales_por_mes_Total_sumable__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.SCP_Certa_GC__Moneda__c</field>
            <operation>equals</operation>
            <value>USD</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Total_CUV_ARG__c</fullName>
        <label>SCP dep</label>
        <summarizedField>OpportunityLineItem.SCP_Certa_GC__Cargo_unica_vez__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.SCP_Certa_GC__Moneda__c</field>
            <operation>equals</operation>
            <value>ARG</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Total_CUV_ARG_resumen__c</fullName>
        <label>Total CUV (ARG)</label>
        <summarizedField>OpportunityLineItem.SCP_Certa_GC__Cargo_por_nica_vez_total_sumable__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.SCP_Certa_GC__Moneda__c</field>
            <operation>equals</operation>
            <value>ARG</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Total_CUV_USD__c</fullName>
        <label>SCP Dep</label>
        <summarizedField>OpportunityLineItem.SCP_Certa_GC__Cargo_unica_vez__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.SCP_Certa_GC__Moneda__c</field>
            <operation>equals</operation>
            <value>USD</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Total_CUV_USD_resumen__c</fullName>
        <label>Total CUV (USD)</label>
        <summarizedField>OpportunityLineItem.SCP_Certa_GC__Cargo_por_nica_vez_total_sumable__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.SCP_Certa_GC__Moneda__c</field>
            <operation>equals</operation>
            <value>USD</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Total_Forecasted_FCV__c</fullName>
        <description>Field in the header of a opportunity. It is based in 2 fields calculated via trigger and sums in the subopportunities</description>
        <formula>SCP_Certa_GC__Estimated_FCV_Calculated__c * SCP_Certa_GC__Calculated_Win_Probability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>= Calculated FCV * calculated win probability
Possible Values: Calculated field in €.
Filled in by: Calculated automatically.</inlineHelpText>
        <label>SCP Dep</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Unique_Charges__c</fullName>
        <label>Ingreso por única vez</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Unsold_Pipeline__c</fullName>
        <formula>SCP_Certa_GC__Valor_Total_del_Contrato_calculado__c*Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor total del Contrato (FCV) (pond.)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Valor_Total_del_Contrato_calculado__c</fullName>
        <formula>SCP_Certa_GC__Monthly_Charges__c * SCP_Certa_GC__contract_duration_months__c + SCP_Certa_GC__Unique_Charges__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor total del Contrato (FCV)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Value_Proposition__c</fullName>
        <label>Value Proposition</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Weighted_Estimated_Year_End_Revenue__c</fullName>
        <formula>SCP_Certa_GC__Estimated_Year_End_Revenue__c * Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ingresos Totales año fiscal (pond.)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__contract_duration_months__c</fullName>
        <label>Duración del contrato (meses)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__fecha_probable_de_venta__c</fullName>
        <label>fecha probable de venta</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__id__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AccountRecordType__c</fullName>
        <formula>Account.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AccountSLA__c</fullName>
        <formula>TEXT(Account.vlocity_cmt__vSLA__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account SLA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DefaultCurrencyPaymentMode__c</fullName>
        <label>Default Currency Payment Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Currency</fullName>
                    <default>true</default>
                    <label>Currency</label>
                </value>
                <value>
                    <fullName>Loyalty</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveOneTimeLoyaltyTotal__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Effective Total: One Time Loyalty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveOneTimeTotal__c</fullName>
        <label>Effective One Time Total</label>
        <summarizedField>OpportunityLineItem.vlocity_cmt__EffectiveOneTimeTotal__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveOpportunityTotal__c</fullName>
        <formula>vlocity_cmt__EffectiveOneTimeTotal__c + ( vlocity_cmt__EffectiveRecurringTotal__c * vlocity_cmt__NumberOfContractedMonths__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Opportunity Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveRecurringTotal__c</fullName>
        <label>Effective Recurring Total</label>
        <summarizedField>OpportunityLineItem.vlocity_cmt__EffectiveRecurringTotal__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FollowUpTo__c</fullName>
        <description>If this activity is a follow up to a previous activity.</description>
        <label>Follow Up To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FrameContractId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Frame contract linked to this opportunity</description>
        <label>Frame Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsContractRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes if opportunity requires a contract</description>
        <label>Require Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__NumberOfContractedMonths__c</fullName>
        <label>Number Of Contracted Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTimeLoyaltyTotal__c</fullName>
        <defaultValue>0</defaultValue>
        <label>One Time Loyalty Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTimeTotal__c</fullName>
        <label>One Time Total</label>
        <summarizedField>OpportunityLineItem.vlocity_cmt__OneTimeTotal__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OpportunityTotal__c</fullName>
        <formula>vlocity_cmt__OneTimeTotal__c + ( vlocity_cmt__RecurringTotal__c * vlocity_cmt__NumberOfContractedMonths__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OriginatingChannel__c</fullName>
        <description>Channel can be used to drive Eligibility/Compatibility/Recommendations/Pricing/Other implementations, e.g. Certain Product Bundles are only available on the Web or Call Center channel but not via the Retail and Dealer channels OR A product may have a different price when sold via the Web than sold via the Retail channel, etc.</description>
        <label>Originating Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Call Center</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Dealer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OriginatingContractId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Points to the contract from which this opportunity was created</description>
        <label>Originating Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PartyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The referral source of an opportunity</description>
        <label>Referral Source</label>
        <referenceTo>vlocity_cmt__Party__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PriceListId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price List</label>
        <referenceTo>vlocity_cmt__PriceList__c</referenceTo>
        <relationshipLabel>Opportunities Using This Price List</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RecurringTotal__c</fullName>
        <label>Recurring Total</label>
        <summarizedField>OpportunityLineItem.vlocity_cmt__RecurringTotal__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ShippingPostalCode__c</fullName>
        <formula>Account.ShippingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ShippingState__c</fullName>
        <formula>Account.ShippingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ValidationDate__c</fullName>
        <description>Date when the validation was last run</description>
        <inlineHelpText>Last validation date</inlineHelpText>
        <label>Validation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ValidationMessage__c</fullName>
        <description>Message from last validation run</description>
        <inlineHelpText>Message from last validation run</inlineHelpText>
        <label>Validation Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ValidationStatus__c</fullName>
        <description>Validation Status</description>
        <inlineHelpText>If an opportunity has been validated, it will show the status Passed or Failed. If no validation has been run yet, it will show Not yet run.</inlineHelpText>
        <label>Validation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not yet run</fullName>
                    <default>true</default>
                    <label>Not yet run</label>
                </value>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>vlocity_cmt__MobilePhoneOpportunity</fullName>
        <active>true</active>
        <businessProcess>vlocity_cmt__Vlocity Sales Process</businessProcess>
        <description>Mobile Phone Opportunity</description>
        <label>MobilePhoneOpportunity</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>SCP_Certa_GC__TMI_Positivo</fullName>
        <active>true</active>
        <description>El valor del TMI debe ser un número positivo.</description>
        <errorConditionFormula>SCP_Certa_GC__TMI__c &lt; 0</errorConditionFormula>
        <errorMessage>El valor del TMI debe ser un número positivo.</errorMessage>
    </validationRules>
</CustomObject>